@@ -4,6 +4,8 @@ New in 1.13:
 * Increased lower bound on retransmission time to 300ms.
 * Removed Linux specific optimization in processing time calculation which
   made RPC2 clients assume a server can respond faster than it actually does.
+* Fixed the very infrequent SFTP_SendResponse crash again, hopefully for real
+  this time.
 
 New in 1.12:
 
